# consulting-os

./: .gitignore  CLAUDE.md  DESIGN.md  ICP.md  README.md  active-engagements.md  evolution-log.md  install.sh  pyproject.toml  trade-desk-interview-ja.md
.claude/: agents.routing.tsv  codemap.md  settings.json
.claude/agents/: sales-deck-designer.md
.claude/commands/: analyze.md  check-hallucination.md  codemap.md  evolve.md  refactor-clean.md  (+4 more)
.githooks/: commit-msg  pre-commit  setup.sh
clients/: README.md
consulting_os/: __init__.py  agent_loader.py  cli.py  falsification.py  invoke.py  skill_loader.py  source_label.py  types.py
docs/: agent-collaboration-patterns.md  agent-routing.md  ai-agent-os-product.md  consulting-os-product.md  creative-delegation-prompts.md  discipline-all-layers.md  external-references.md  handoff-mizuno-funding-v4.md  handoff-n-y-craft-meeting-2026-05-09.md  handoff-n-y-craft-os-beta-setup.md  handoff-os-activation-template.md  handoff-os-bootstrap-guard.md  handoff-os-proposal-iteration-learnings.md  handoff-yorunokotoba-os-activation.md  hook-coverage-audit.md  orchestration-protocol.md  origin.md  os-fix-orchestration-physical-block-2026-05-04.md  portability-non-claude-code.md  sales-deck-rules.md  v4-competitive-analyst-judgment.md  v4-kpi-analytics-judgment.md  v4-legal-compliance-judgment.md  v4-proposal-writer-judgment.md  v4-strategy-lead-judgment.md
scripts/: deploy-oem.sh  distribute-os-skills.sh
tests/: test_agent_loader.py  test_auto_validate_hook.py  test_falsification.py  test_invoke.py  test_source_label.py
(+234 files in other folders)
